Framework for ListActivity
Basic working listView with dummy data function added. Also data
structure has been modified at this commit.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,10 @@
     <string name="developer_options">↓↓Developer Options↓↓</string>
     <string name="insert_dummy_eventtype_data">Insert Dummy EventType data</string>
     <string name="insert_dummy_calendar_data">Insert dummy calendar data</string>
+    <string name="sample_workout_name">Sample Workout Name</string>
+    <string name="set">Set:</string>
+    <string name="rep">rep:</string>
+    <string name="sample_rep">77</string>
+    <string name="sample_set">66</string>
+    <string name="insert_dummy_event">Insert dummy event value</string>
 </resources>
