Basis for loading a specific event using CursorLoader
- Created an activity to show info about specific event
- Created basic components for the users to modify specific event
- CursorLoader implementation to load thru the SQL data

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="sample_rep">77</string>
     <string name="sample_set">66</string>
     <string name="insert_dummy_event">Insert dummy event value</string>
+    <string name="delete_event">Delete Event</string>
 </resources>
