Redesigned dev options

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,16 +5,16 @@
     <string name="begin_workout">Begin Workout</string>
     <string name="plan_workout">Plan Workout</string>
     <string name="search_bar_goes_here">Search Bar Goes Here</string>
-    <string name="delete_dummy_data">Delete all data in calendar</string>
+    <string name="delete_dummy_data">Delete Calendar</string>
     <string name="developer_options">↓↓Developer Options↓↓</string>
-    <string name="insert_dummy_eventtype_data">Insert Dummy EventType data</string>
-    <string name="insert_dummy_calendar_data">Insert dummy calendar data</string>
+    <string name="insert_dummy_eventtype_data">Insert EventType</string>
+    <string name="insert_dummy_calendar_data">Insert calendar</string>
     <string name="sample_workout_name">Sample Workout Name</string>
     <string name="set">Set:</string>
     <string name="rep">rep:</string>
     <string name="sample_rep">77</string>
     <string name="sample_set">66</string>
-    <string name="insert_dummy_event">Insert dummy event value</string>
+    <string name="insert_dummy_event">Insert event values</string>
     <string name="delete_event">Delete Event</string>
     <string name="hint_text_weight">Weight</string>
     <string name="for_calendar">For Calendar</string>
