--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="for_event_table">For Event Table</string>
     <string name="for_event_type_table">For Event Type Table</string>
     <string name="insert_today_calendar">Insert today Calendar</string>
+    <string name="delete_all_events">Delete All Events</string>
 </resources>
