Modify any events in ListActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="insert_today_calendar">Insert today Calendar</string>
     <string name="delete_all_events">Delete All Events</string>
     <string name="add_event">Add Event</string>
+    <string name="modify_event">Modify Event</string>
 </resources>
