--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,6 @@
     <string name="modify_event">Modify Event</string>
     <string name="insert_event_values">Insert Event Values</string>
     <string name="insert_type_event">Insert Event Type</string>
+    <string name="search_events">Search Events</string>
+    <string name="hint_search_events">Search Events...</string>
 </resources>
