やんざむさんのを適用してみた

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="search_events">Search Events</string>
     <string name="hint_search_events">Search Events...</string>
     <string name="hint_text_example">Hint Text</string>
+    <string name="suggestion_provider_authority">suggestion_provider_authority</string>
 </resources>
