Fixed listview in ListActivity, and added a dev option menu to launch SearchResultsAcitvity from main menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="hint_text_example">Hint Text</string>
     <string name="suggestion_provider_authority">suggestion_provider_authority</string>
     <string name="input_event">Input Event</string>
+    <string name="launch_searchactivity">Launch SearchActivity</string>
 </resources>
