Not optimized (messy String extraction), but now the raw text file has a pathway to go to the FTS table

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="suggestion_provider_authority">suggestion_provider_authority</string>
     <string name="input_event">Input Event</string>
     <string name="launch_searchactivity">Launch SearchActivity</string>
+    <string name="reset_fts_table">Reset FTS Table</string>
 </resources>
