--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,8 @@
     <string name="launch_searchactivity">Launch SearchActivity</string>
     <string name="reset_fts_table">Reset FTS Table</string>
     <string name="test_eventtype_db">Test EventType DB</string>
+    <string name="number">No.</string>
+    <string name="nulltext">null</string>
+    <string name="number_text">No.</string>
+    <string name="hint_text">Hint Text</string>
 </resources>
