WorkoutListView (single item) layout improved

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="insert_dummy_calendar_data">Insert calendar</string>
     <string name="sample_workout_name">Sample Workout Name</string>
     <string name="set">Set:</string>
-    <string name="rep">rep:</string>
+    <string name="rep">Rep:</string>
     <string name="sample_rep">77</string>
     <string name="sample_set">66</string>
     <string name="insert_dummy_event">Insert event values</string>
