--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,8 @@
     <string name="hint_text">Hint Text</string>
     <string name="cancel">Cancel</string>
     <string name="weight">Weight:</string>
+    <string name="ui">UI</string>
+    <string name="settings">Settings</string>
+    <string name="unit">Unit</string>
+    <string name="unit_hint_text">Choose preferred unit</string>
 </resources>
