--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="settings">Settings</string>
     <string name="unit">Unit</string>
     <string name="unit_hint_text">Choose preferred unit</string>
+    <string name="pref_unit">pref_unit</string>
 </resources>
