--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,6 @@
     <string name="unit">Unit</string>
     <string name="unit_hint_text">Choose preferred unit</string>
     <string name="pref_unit">pref_unit</string>
+    <string name="kg">(kg)</string>
+    <string name="lb">(lb)</string>
 </resources>
