onBackPressed() behavior improved

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,8 @@
     <string name="unit">Unit</string>
     <string name="unit_hint_text">Choose preferred unit</string>
     <string name="pref_unit">pref_unit</string>
+    <string name="unit_metric">unit_metric</string>
+    <string name="unit_imperial">unit_imperial</string>
     <string name="kg">(kg)</string>
     <string name="lb">(lb)</string>
     <string name="hint_text_progress">Creating your workout database:</string>
@@ -52,16 +54,18 @@
     <string name="percent_symbol">%</string>
     <string name="about">About</string>
     <string name="about_content_text">
-        Thank you a lot for using this app! I am a university student in Tokyo. I know this isn\'t
+        \n \n
+        Thank you a lot for using this app! \n \n \n I am a university student in Tokyo.
+        I know this isn\'t
         the prettiest app out there — however, I\'m hoping to improve this app into something
         everybody can use stress-free, everyday. \n \n \n
-        You guys the first users, are amazing! Please come check out this app from time to time -
-        This will definitely be updated for improvements.
+        You are one of the first users - amazing! Please come check out this app from time to time -
+        This will definitely be updated for improvements. \n \n \n
     </string>
     <string name="about_credits_text">
         Credits:
         The awesome WeightLifty icon was created by: freepik from http://www.flaticon.com/authors/freepik.
-        http://www.flaticon.com is an awesome website where you can download all kinds of icons for free.
+        http://www.flaticon.com is an awesome website where you can download all kinds of icons for free. \n \n
     </string>
-    <string name="Author_text">Author: Etchee. (https://github.com/Etchee)</string>
+    <string name="Author_text">Author: Etchee. ( https://github.com/Etchee )</string>
 </resources>
